# server/swagger_server/models/__init__.py
@@ -8,9 +8,10 @@ from swagger_server.models.body import Body
 from swagger_server.models.contact import Contact
 from swagger_server.models.housing import Housing
 from swagger_server.models.inline_response200 import InlineResponse200
+from swagger_server.models.offence_summary import OffenceSummary
 from swagger_server.models.person import Person
+from swagger_server.models.person_query import PersonQuery
 from swagger_server.models.police import Police
-from swagger_server.models.police_offences import PoliceOffences
 from swagger_server.models.school import School
-from swagger_server.models.service_map import ServiceMap
-from swagger_server.models.source_data import SourceData
+from swagger_server.models.service_detail import ServiceDetail
+from swagger_server.models.service_summary import ServiceSummary
