# server/swagger_server/models/adult_social_care.py
@@ -7,7 +7,6 @@ from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
 from swagger_server.models.contact import Contact  # noqa: F401,E501
-from swagger_server.models.source_data import SourceData  # noqa: F401,E501
 import re  # noqa: F401,E501
 from swagger_server import util
 
@@ -17,15 +16,9 @@ class AdultSocialCare(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, coverage_start_date: date=None, coverage_end_date: date=None, coverage_geographic_area: str=None, service_involvement: str=None, contact: Contact=None, start_date_of_last_involvement: date=None, date_of_most_recent_interaction: date=None):  # noqa: E501
+    def __init__(self, service_involvement: str=None, contact: Contact=None, start_date_of_last_involvement: date=None, date_of_most_recent_interaction: date=None):  # noqa: E501
         """AdultSocialCare - a model defined in Swagger
 
-        :param coverage_start_date: The coverage_start_date of this AdultSocialCare.  # noqa: E501
-        :type coverage_start_date: date
-        :param coverage_end_date: The coverage_end_date of this AdultSocialCare.  # noqa: E501
-        :type coverage_end_date: date
-        :param coverage_geographic_area: The coverage_geographic_area of this AdultSocialCare.  # noqa: E501
-        :type coverage_geographic_area: str
         :param service_involvement: The service_involvement of this AdultSocialCare.  # noqa: E501
         :type service_involvement: str
         :param contact: The contact of this AdultSocialCare.  # noqa: E501
@@ -36,9 +29,6 @@ class AdultSocialCare(Model):
         :type date_of_most_recent_interaction: date
         """
         self.swagger_types = {
-            'coverage_start_date': date,
-            'coverage_end_date': date,
-            'coverage_geographic_area': str,
             'service_involvement': str,
             'contact': Contact,
             'start_date_of_last_involvement': date,
@@ -46,17 +36,11 @@ class AdultSocialCare(Model):
         }
 
         self.attribute_map = {
-            'coverage_start_date': 'coverageStartDate',
-            'coverage_end_date': 'coverageEndDate',
-            'coverage_geographic_area': 'coverageGeographicArea',
             'service_involvement': 'serviceInvolvement',
             'contact': 'contact',
             'start_date_of_last_involvement': 'startDateOfLastInvolvement',
             'date_of_most_recent_interaction': 'dateOfMostRecentInteraction'
         }
-        self._coverage_start_date = coverage_start_date
-        self._coverage_end_date = coverage_end_date
-        self._coverage_geographic_area = coverage_geographic_area
         self._service_involvement = service_involvement
         self._contact = contact
         self._start_date_of_last_involvement = start_date_of_last_involvement
@@ -72,69 +56,6 @@ class AdultSocialCare(Model):
         :rtype: AdultSocialCare
         """
         return util.deserialize_model(dikt, cls)
-
-    @property
-    def coverage_start_date(self) -> date:
-        """Gets the coverage_start_date of this AdultSocialCare.
-
-
-        :return: The coverage_start_date of this AdultSocialCare.
-        :rtype: date
-        """
-        return self._coverage_start_date
-
-    @coverage_start_date.setter
-    def coverage_start_date(self, coverage_start_date: date):
-        """Sets the coverage_start_date of this AdultSocialCare.
-
-
-        :param coverage_start_date: The coverage_start_date of this AdultSocialCare.
-        :type coverage_start_date: date
-        """
-
-        self._coverage_start_date = coverage_start_date
-
-    @property
-    def coverage_end_date(self) -> date:
-        """Gets the coverage_end_date of this AdultSocialCare.
-
-
-        :return: The coverage_end_date of this AdultSocialCare.
-        :rtype: date
-        """
-        return self._coverage_end_date
-
-    @coverage_end_date.setter
-    def coverage_end_date(self, coverage_end_date: date):
-        """Sets the coverage_end_date of this AdultSocialCare.
-
-
-        :param coverage_end_date: The coverage_end_date of this AdultSocialCare.
-        :type coverage_end_date: date
-        """
-
-        self._coverage_end_date = coverage_end_date
-
-    @property
-    def coverage_geographic_area(self) -> str:
-        """Gets the coverage_geographic_area of this AdultSocialCare.
-
-
-        :return: The coverage_geographic_area of this AdultSocialCare.
-        :rtype: str
-        """
-        return self._coverage_geographic_area
-
-    @coverage_geographic_area.setter
-    def coverage_geographic_area(self, coverage_geographic_area: str):
-        """Sets the coverage_geographic_area of this AdultSocialCare.
-
-
-        :param coverage_geographic_area: The coverage_geographic_area of this AdultSocialCare.
-        :type coverage_geographic_area: str
-        """
-
-        self._coverage_geographic_area = coverage_geographic_area
 
     @property
     def service_involvement(self) -> str:
