# server/swagger_server/models/offence_summary.py
@@ -9,19 +9,19 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class PoliceOffences(Model):
+class OffenceSummary(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self, date_of_offence: date=None, type_of_offence: str=None, nature_of_involvement: str=None):  # noqa: E501
-        """PoliceOffences - a model defined in Swagger
+        """OffenceSummary - a model defined in Swagger
 
-        :param date_of_offence: The date_of_offence of this PoliceOffences.  # noqa: E501
+        :param date_of_offence: The date_of_offence of this OffenceSummary.  # noqa: E501
         :type date_of_offence: date
-        :param type_of_offence: The type_of_offence of this PoliceOffences.  # noqa: E501
+        :param type_of_offence: The type_of_offence of this OffenceSummary.  # noqa: E501
         :type type_of_offence: str
-        :param nature_of_involvement: The nature_of_involvement of this PoliceOffences.  # noqa: E501
+        :param nature_of_involvement: The nature_of_involvement of this OffenceSummary.  # noqa: E501
         :type nature_of_involvement: str
         """
         self.swagger_types = {
@@ -40,32 +40,32 @@ class PoliceOffences(Model):
         self._nature_of_involvement = nature_of_involvement
 
     @classmethod
-    def from_dict(cls, dikt) -> 'PoliceOffences':
+    def from_dict(cls, dikt) -> 'OffenceSummary':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The Police_offences of this PoliceOffences.  # noqa: E501
-        :rtype: PoliceOffences
+        :return: The OffenceSummary of this OffenceSummary.  # noqa: E501
+        :rtype: OffenceSummary
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def date_of_offence(self) -> date:
-        """Gets the date_of_offence of this PoliceOffences.
+        """Gets the date_of_offence of this OffenceSummary.
 
 
-        :return: The date_of_offence of this PoliceOffences.
+        :return: The date_of_offence of this OffenceSummary.
         :rtype: date
         """
         return self._date_of_offence
 
     @date_of_offence.setter
     def date_of_offence(self, date_of_offence: date):
-        """Sets the date_of_offence of this PoliceOffences.
+        """Sets the date_of_offence of this OffenceSummary.
 
 
-        :param date_of_offence: The date_of_offence of this PoliceOffences.
+        :param date_of_offence: The date_of_offence of this OffenceSummary.
         :type date_of_offence: date
         """
 
@@ -73,20 +73,20 @@ class PoliceOffences(Model):
 
     @property
     def type_of_offence(self) -> str:
-        """Gets the type_of_offence of this PoliceOffences.
+        """Gets the type_of_offence of this OffenceSummary.
 
 
-        :return: The type_of_offence of this PoliceOffences.
+        :return: The type_of_offence of this OffenceSummary.
         :rtype: str
         """
         return self._type_of_offence
 
     @type_of_offence.setter
     def type_of_offence(self, type_of_offence: str):
-        """Sets the type_of_offence of this PoliceOffences.
+        """Sets the type_of_offence of this OffenceSummary.
 
 
-        :param type_of_offence: The type_of_offence of this PoliceOffences.
+        :param type_of_offence: The type_of_offence of this OffenceSummary.
         :type type_of_offence: str
         """
 
@@ -94,20 +94,20 @@ class PoliceOffences(Model):
 
     @property
     def nature_of_involvement(self) -> str:
-        """Gets the nature_of_involvement of this PoliceOffences.
+        """Gets the nature_of_involvement of this OffenceSummary.
 
 
-        :return: The nature_of_involvement of this PoliceOffences.
+        :return: The nature_of_involvement of this OffenceSummary.
         :rtype: str
         """
         return self._nature_of_involvement
 
     @nature_of_involvement.setter
     def nature_of_involvement(self, nature_of_involvement: str):
-        """Sets the nature_of_involvement of this PoliceOffences.
+        """Sets the nature_of_involvement of this OffenceSummary.
 
 
-        :param nature_of_involvement: The nature_of_involvement of this PoliceOffences.
+        :param nature_of_involvement: The nature_of_involvement of this OffenceSummary.
         :type nature_of_involvement: str
         """
 
