# server/swagger_server/models/source_data.py
@@ -1,114 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class SourceData(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, coverage_start_date: date=None, coverage_end_date: date=None, coverage_geographic_area: str=None):  # noqa: E501
-        """SourceData - a model defined in Swagger
-
-        :param coverage_start_date: The coverage_start_date of this SourceData.  # noqa: E501
-        :type coverage_start_date: date
-        :param coverage_end_date: The coverage_end_date of this SourceData.  # noqa: E501
-        :type coverage_end_date: date
-        :param coverage_geographic_area: The coverage_geographic_area of this SourceData.  # noqa: E501
-        :type coverage_geographic_area: str
-        """
-        self.swagger_types = {
-            'coverage_start_date': date,
-            'coverage_end_date': date,
-            'coverage_geographic_area': str
-        }
-
-        self.attribute_map = {
-            'coverage_start_date': 'coverageStartDate',
-            'coverage_end_date': 'coverageEndDate',
-            'coverage_geographic_area': 'coverageGeographicArea'
-        }
-        self._coverage_start_date = coverage_start_date
-        self._coverage_end_date = coverage_end_date
-        self._coverage_geographic_area = coverage_geographic_area
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'SourceData':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The SourceData of this SourceData.  # noqa: E501
-        :rtype: SourceData
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def coverage_start_date(self) -> date:
-        """Gets the coverage_start_date of this SourceData.
-
-
-        :return: The coverage_start_date of this SourceData.
-        :rtype: date
-        """
-        return self._coverage_start_date
-
-    @coverage_start_date.setter
-    def coverage_start_date(self, coverage_start_date: date):
-        """Sets the coverage_start_date of this SourceData.
-
-
-        :param coverage_start_date: The coverage_start_date of this SourceData.
-        :type coverage_start_date: date
-        """
-
-        self._coverage_start_date = coverage_start_date
-
-    @property
-    def coverage_end_date(self) -> date:
-        """Gets the coverage_end_date of this SourceData.
-
-
-        :return: The coverage_end_date of this SourceData.
-        :rtype: date
-        """
-        return self._coverage_end_date
-
-    @coverage_end_date.setter
-    def coverage_end_date(self, coverage_end_date: date):
-        """Sets the coverage_end_date of this SourceData.
-
-
-        :param coverage_end_date: The coverage_end_date of this SourceData.
-        :type coverage_end_date: date
-        """
-
-        self._coverage_end_date = coverage_end_date
-
-    @property
-    def coverage_geographic_area(self) -> str:
-        """Gets the coverage_geographic_area of this SourceData.
-
-
-        :return: The coverage_geographic_area of this SourceData.
-        :rtype: str
-        """
-        return self._coverage_geographic_area
-
-    @coverage_geographic_area.setter
-    def coverage_geographic_area(self, coverage_geographic_area: str):
-        """Sets the coverage_geographic_area of this SourceData.
-
-
-        :param coverage_geographic_area: The coverage_geographic_area of this SourceData.
-        :type coverage_geographic_area: str
-        """
-
-        self._coverage_geographic_area = coverage_geographic_area
